# SquidMIP

./: .gitignore  COMMITS-EXPLAINED.md  README.md  TODOS.md  environment.yml  pyproject.toml
.spec/: STATE.md
.sprint/: oracle.draft.md
docs/: DESIGN-STATUS.md  DESIGN.md  SCOPE-video-player.md  SCOPE.md  architecture.html  hcs-viewer-quickstart.md  ima-183-eng-review.md  ima-184-eng-review.md  ima-188-eng-review.md  ima-189-eng-review.md  ima-209-eng-review.md  ima-222-viewer-swap.patch  ima-223-225-viewer.patch  ima-229-eng-review.md  ima-233-eng-review.md  ima-247-viewer.patch  napari-gate.md  plate-view.html  rendering-contract.md
scripts/: Install-Desktop-Shortcut.ps1  README.md  Setup-Windows.ps1  build_app.py  com.cephla.squidxplorer.gitsync.plist  git-sync-watchdog.sh  hcs-viewer.spec  hcs_viewer_entry.py  mip-tool.bat  odon_bench.py  smoke_import.py
squidhcs/: __init__.py  __main__.py  _acquisition.py  _cli.py  _engine.py  _montage.py  _output.py  _viewer.py  _zarr_store.py  projection.py  reader.py
squidmip/: __init__.py  _acquisition.py  _activity.py  _agave.py  _agave_pane.py  _background.py  _benchmark.py  _cellpose.py  _channels.py  _cli.py  _correction.py  _decon.py  _engine.py  _explore.py  _flatfield.py  _layers.py  _minerva.py  _montage.py  _mosaic_source.py  _napari3d.py  _napari_pane.py  _napari_view.py  _odon_bench.py  _op_panels.py  _op_result.py  _oracle.py  _output.py  _placement.py  _plate.py  _region_viewer.py  _slide_art.py  _spots.py  _stitch.py  _theme.py  _video.py  _viewer.py  _viewer_bench.py  _zarr_store.py  correction.py  projection.py  (+1 more)
tests/: conftest.py  ngff_check.py  test_acquisition.py  test_acquisition_model.py  test_activity.py  test_agave.py  test_agave_pane.py  test_background.py  test_bench_adapters.py  test_bench_runner.py  test_benchmark.py  test_channel_bar.py  test_channels.py  test_cli.py  test_correction.py  test_decon.py  test_decon_qc.py  test_engine.py  test_entry_points.py  test_explore.py  test_explore_pane.py  test_fov_positions.py  test_ids.py  test_integration.py  test_layer_tree.py  test_layers.py  test_minerva.py  test_montage.py  test_mosaic_source.py  test_multi_fov.py  test_napari_pane.py  test_napari_view.py  test_odon_bench.py  test_op_panels.py  test_op_result.py  test_operator_fidelity.py  test_operator_integration.py  test_oracle.py  test_output.py  test_performance.py  (+16 more)
tools/: _chunk_recorder.py  acceptance.py  commit_gate.sh  decon_qc.py  odon_benchmark.py  run_suite_chunked.py  stitch_demo.py  tile_bench.py  (+3 more)
(+15 files in other folders)
